force-app/main/default/objects/Scenario__c/fields/AppliedRule__c.field-meta.xml
<CustomField>
    <fullName>AppliedRule__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applied Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>