force-app/main/default/objects/Scenario__c/fields/CombinedScenario__c.field-meta.xml
<CustomField>
    <fullName>CombinedScenario__c</fullName>
    <formula>Factor1__c + 
	IF(ISBLANK(Factor2__c),&apos;, &apos;, &apos;, &apos; + Factor2__c) +
		IF(ISBLANK(Factor3__c),&apos;, &apos;, &apos;, &apos; + Factor3__c) +
			IF(ISBLANK(Factor4__c),&apos;, &apos;, &apos;, &apos; + Factor4__c) +
				IF(ISBLANK(Factor5__c),&apos;, &apos;, &apos;, &apos; + Factor5__c) +
					IF(ISBLANK(Factor6__c),&apos;, &apos;, &apos;, &apos; + Factor6__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined Scenario</label>
    <type>Text</type>
</CustomField>