force-app/main/default/objects/Scenario__c/fields/ElementData1__c.field-meta.xml
<CustomField>
    <fullName>ElementData1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variable 1</label>
    <referenceTo>ElementData__c</referenceTo>
    <relationshipLabel>Element Scenario 1</relationshipLabel>
    <relationshipName>Scenarios1</relationshipName>
    <type>Lookup</type>
</CustomField>