force-app/main/default/objects/Scenario__c/fields/ElementData2__c.field-meta.xml
<CustomField>
    <fullName>ElementData2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Variable 2</label>
    <referenceTo>ElementData__c</referenceTo>
    <relationshipLabel>Element Scenario 2</relationshipLabel>
    <relationshipName>Scenarios2</relationshipName>
    <type>Lookup</type>
</CustomField>