force-app/main/default/objects/Scenario__c/fields/Factor3__c.field-meta.xml
<CustomField>
    <fullName>Factor3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Factor3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>