force-app/main/default/objects/Scenario__c/fields/ManualOutcome__c.field-meta.xml
<CustomField>
    <fullName>ManualOutcome__c</fullName>
    <label>Manual Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>