force-app/main/default/objects/Scenario__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applied Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Scenarios</relationshipLabel>
    <relationshipName>Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>