force-app/main/default/objects/Scenario__c/fields/RuleOutcome__c.field-meta.xml
<CustomField>
    <fullName>RuleOutcome__c</fullName>
    <formula>Rule__r.Outcome__c</formula>
    <label>Rule Outcome</label>
    <type>Text</type>
</CustomField>